# FB-Trim

./: .gitignore  CMakeLists.txt  README.md  freeze.txt
AI_models/: pre3_both.pt
bash/: konect_500-10000.txt  processing_konect.sh
c++/: Utils.cpp  Utils.hpp
c++/AI/: AINetwork.hpp
c++/Algorithms/: FB.cpp  FB.hpp  Kosaraju.cpp  Kosaraju.hpp
c++/DataStructures/: AdjacencyMatrix.cpp  AdjacencyMatrix.hpp  Graph.cpp  Graph.hpp
c++/Executables/: Info.cpp  Main.cpp
data/: KONECT_data.csv  NR_data.csv
data/KONECT_500-10000/Gnutella (05)/: README.p2p-Gnutella05  meta.p2p-Gnutella05
data/KONECT_500-10000/Gnutella (06)/: README.p2p-Gnutella06  meta.p2p-Gnutella06
data/KONECT_500-10000/Gnutella (08)/: README.p2p-Gnutella08  meta.p2p-Gnutella08
data/KONECT_500-10000/Gnutella (09)/: README.p2p-Gnutella09  meta.p2p-Gnutella09
data/KONECT_500-10000/OpenFlights (Opsahl)/: README.opsahl-openflights
data/KONECT_500-10000/Wikipedia talk (br)/: README.wiki_talk_br  meta.wiki_talk_br
data/KONECT_500-10000/Wikipedia talk (cy)/: README.wiki_talk_cy  meta.wiki_talk_cy
data/KONECT_500-10000/Wikipedia talk (ht)/: README.wiki_talk_ht
data/KONECT_500-10000/Wikipedia talk (oc)/: README.wiki_talk_oc  edges  (+1 more)
executables/: info
jobs/: exaluate_eval_graphs.job  exaluate_training_graphs.job  train_model.job
python/: aggregate.py  combine.py  download_KONECT.py  download_NR.py  download_utils.py  graph_utils.py  remove_dupes.py  result_analysis.py
python/AI/: pre.py  utils.py
results/: trim_logs
results/node_info/: KONECT.csv  NR.csv
results/runs/: results.csv
(+1 files in other folders)
